# Lummao

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  autobuild.xml  bootstrap_ubuntu_ci.sh  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi_publish.yml  pytest.yml
extras/: README.md  hello_shellsl.lsl  lslwsgi.py  shellsl  web_server.lsl
lummao/: __init__.py  cli.py  exceptions.py  goto.py  http.py  lslexecutils.py  shellsl.py
src/: compiler.cc  json_ir_pass.cc  json_ir_pass.hh  lummao.cc  python_pass.cc  python_pass.hh
tests/: test_conformance.py  test_harnesses.py
tests/test_resources/: continue_like_jump_with_ret.lsl  detected_touch.lsl  function_mocking.lsl  hoist_decl_unstructured_jump.lsl  http_request.lsl  jump_out_of_while_true.lsl  jump_out_of_while_true.py  lsl_conformance.lsl  lsl_conformance.py  lsl_conformance2.lsl  lsl_conformance2.py  one_error.lsl  statements.lsl  statements.py  timers.lsl  two_errors.lsl  uncleared_locals.lsl
